- redis stream notify customization change event

--- a/document/v1.0.md
+++ b/document/v1.0.md
@@ -3,8 +3,8 @@
 ```groovy
 rootProject.name = 'multi-tenancy-spring-boot-starter'
 include("dependencies")
-include("multi-tenancy-example")
-include("multi-tenancy-common")
+include("multi-tenancy-example") //综合案例，整合一下各个组件
+include("multi-tenancy-common") //异常，ThreadLocal
 include("multi-tenancy-customization") //租户个性化配置项以及租户动态脚本执行器
 include("multi-tenancy-extension") //租户定制化业务扩展点
 include("multi-tenancy-schema-toolkit") // 对postgresql的schema 封装工具类
