--- a/document/v1.0.md
+++ b/document/v1.0.md
@@ -1,21 +1,22 @@
-- 工程优化
+- 工程结构优化
 
 ```groovy
-rootProject.name = 'multi-tenancy-spring-boot-starter'
+rootProject.name = 'multi-tenancy-framework'
 include("dependencies")
 include("multi-tenancy-example") //综合案例，整合一下各个组件
 include("multi-tenancy-common") //异常，ThreadLocal
+include("multi-tenancy-trace") //trace 将tenant 信息放入到当前的日志trace中
 include("multi-tenancy-customization") //租户个性化配置项以及租户动态脚本执行器
 include("multi-tenancy-extension") //租户定制化业务扩展点
 include("multi-tenancy-schema-toolkit") // 对postgresql的schema 封装工具类
 include("multi-tenancy-resolver") //租户标识解析
 include("multi-tenancy-propagation") //租户传播
-include("multi-tenancy-redis") //租户redis 中key隔离
-include("multi-tenancy-authorization-server") //定制化authorization-server支持多租户
+include("multi-tenancy-iso-redis") //租户redis 中key隔离
+include("multi-tenancy-iso-database") //租户数据库隔离,行级别(PG RLS),schema,database
+include("multi-tenancy-authorization-server") //定制化authorization-server支持多租户认证，授权
 include("multi-tenancy-security") //多租户安全组件
-include("multi-tenancy-database") //租户数据库隔离,行级别(PG RLS),schema,database
 include("multi-tenancy-event-notify") //租户事件通知
-include("multi-tenancy-transactions") //微服务下多租户分布式事务问题
+include("multi-tenancy-distributed-transaction") //微服务下多租户分布式事务问题
 include("multi-tenancy-spring-boot-starter") //starter 自动配置
 ```
 
