--- a/document/v1.0.md
+++ b/document/v1.0.md
@@ -6,7 +6,8 @@ include("dependencies")
 include("multi-tenancy-example") //综合案例，整合一下各个组件
 include("multi-tenancy-common") //异常，ThreadLocal
 include("multi-tenancy-trace") //trace 将tenant 信息放入到当前的日志trace中
-include("multi-tenancy-customization") //租户个性化配置项以及租户动态脚本执行器
+include("multi-tenancy-customization") //租户个性化配置项以
+include("multi-tenancy-dynamic-executor") //租户动态脚本执行器
 include("multi-tenancy-extension") //租户定制化业务扩展点
 include("multi-tenancy-schema-toolkit") // 对postgresql的schema 封装工具类
 include("multi-tenancy-resolver") //租户标识解析
