:art: 完善function 自动配置

--- a/document/v1.0.md
+++ b/document/v1.0.md
@@ -6,8 +6,9 @@ include("dependencies")
 include("multi-tenancy-example") //综合案例，整合一下各个组件
 include("multi-tenancy-common") //异常，ThreadLocal
 include("multi-tenancy-trace") //trace 将tenant 信息放入到当前的日志trace中
-include("multi-tenancy-customization") //租户个性化配置项以
-include("multi-tenancy-dynamic-executor") //租户动态脚本执行器
+include("multi-tenancy-customization") //租户个性化配置项
+include("multi-tenancy-dynamic-script") //租户动态脚本执行器
+include("multi-tenancy-function") //租户定制化业务业务实现使用Function 
 include("multi-tenancy-extension") //租户定制化业务扩展点
 include("multi-tenancy-schema-toolkit") // 对postgresql的schema 封装工具类
 include("multi-tenancy-resolver") //租户标识解析
@@ -20,7 +21,3 @@ include("multi-tenancy-event-notify") //租户事件通知
 include("multi-tenancy-distributed-transaction") //微服务下多租户分布式事务问题
 include("multi-tenancy-spring-boot-starter") //starter 自动配置
 ```
-
-- 三方类库的都为`compileOnly`
-- 兼容SpringBoot2.x 和 3.x
-- 兼容JDK1.8以上
